# P2P-File-Sync

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  README.org  docker-compose.yml  project.md  setup.sh
.sqlx/: query-05cba3bba57363beacdf5923a433b24e13468b17f87e956a8d44837077546bf4.json  query-2ae9ba6820f86c9943aa0db9ee0b8808ad6991a757586ae5f78d494a7edeb70d.json  query-31e46bd4b52bb568d351a1103341a58b9689cc8eaf7905377eddd9d2cb3bd36f.json  query-3a16929fad2aa54eb8b5229d683461169739f0692146ab18835810946d731595.json  query-51a1406956aeb0be2ac82374b7c02682001510c0f3158b5c35a8e3dce0ca4b60.json  query-5961810d6ed5f72a77f6c67b0152c561a85a2e7201d2ae2a6e5e2fba1464c04e.json  query-5a51cc4035aceabbb2b0e91958819e6168f66b4e70a0302b4ffd56c6af8de620.json  query-64737c74603f2b9153fe2fbfc3e1fa724c98e2b0b835f207267b4327ade4403b.json  query-65640417ba83e311e41e85b0cc02052a0b2e9aea9d96ec6ef9314e1277ae164d.json  query-67c9c712a0fced95c9042126012f50c6964ecfa1e8c9a06876efbaff4f5bdb2e.json  query-815b24b2ff546aea94f3efd05580701edc565b40a14452ad031b08ff670d2593.json  query-816c45b1bf9b7f4635ed94c40e3a482931d693516c2ab058d7d36c98b776775f.json  query-9d86ce551882476733318d72e2716e668d284e46976ce1225d8107bec13a0e55.json  query-a6883e58ba9c87a4976afe78adf32522b926f83039302b7564fe3cacaea6d241.json  query-b57e431b59726cdd075c586956c99b09d7a2abfc98902b558555561f547e322b.json  query-b9118e5990f7f254e38d2daed4149288a27cb288392c0af2f45cc537a207debb.json  query-b91f5f18d6bb75b5625a05a365c5eeb33ec5f7f27b9fb7fbb90dce4bd3b19b1a.json  (+11 more)
docker/: config_node1.toml  config_node2.toml
(+14 files in other folders)
