[package]
name = "p2p_file_sync"
version = "0.1.0"
edition = "2021"
default-run = "p2p_file_sync"

[dependencies]
bytes = "1.8.0"
color-eyre = "0.6.3"
dir = "0.1.2"
dirs = "5.0.1"
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
notify = "6.1.1"
rand = "0.8.5"
ratatui = "0.29.0"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.8"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }
thiserror = "1.0.65"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.4"
toml = "0.8.19"
walkdir = "2.5.0"
